# setfit

./: README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  evaluate.yml
evaluation/: all_models.py
src/setfit/: __init__.py  core.py
tests/: test_setfit.py
